--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,7 @@
 # For more information: https://laravel.com/docs/sail
 version: '3'
 services:
-    laravel.test:
+    asocial_media.local:
         build:
             context: ./vendor/laravel/sail/runtimes/8.1
             dockerfile: Dockerfile
@@ -82,6 +82,19 @@ services:
             - '/dev/shm:/dev/shm'
         networks:
             - sail
+    phpmyadmin:
+        image: 'phpmyadmin/phpmyadmin'
+        links:
+            - 'mysql:db'
+        ports:
+            - '8080:80'
+        environment:
+            PMA_USER: 'root'
+            PMA_PASSWORD: '${DB_PASSWORD}'
+        networks:
+            - sail
+        depends_on:
+            - mysql
 networks:
     sail:
         driver: bridge
